# wordle

./: .gitignore  Cargo.toml  README.md  bee.py  checkguess  choices  commit-last  common.py  copy-game  disjoint.py  exceptional_answers.txt  games.md  invalid_notes.md  optimize.md  pycheck.sh  pyproject.toml  render_game.py  repeats.py  requirements.txt  score.py  startwords.py  test_wordle.py  unix_pipes.py  variants.sh  wordle.css  wordle.py  wordle1.py  wordle2.py  wordle3.py  wordle4.py  wordle5.py  wordle6.py  wordle7.py  wordle8.py
src/: lib.rs  main.rs  test.rs
