[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wordle_solve"
src = "src/bin/wordle_solve.rs"

[[bin]]
name = "score"
src = "src/bin/score.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.10.2"
